# sembed-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  a.out  convert.c
.github/workflows/: run-tests.yml
benchmarks/: local_smoke.json
benchmarks/reports/: local_smoke.json  local_smoke.md
convertUtils/: a.out  convertGloveTXT.c  convertWord2vectDS.c
scripts/: generate_embedding_fixtures.py  run_benchmarks.py
src/bench/: benchmark_harness.cpp  diskann_build_benchmark.cpp  main.cpp
src/include/: ArmaVector.hpp  DiskAnn.hpp  HDVector.hpp  Set.hpp  Vector.hpp  batch_stocastic_kmeans.hpp  batch_stochastic_kmeans.hpp  benchmark_harness.hpp  cli_workflow.hpp  dataset.hpp  graph.hpp  load_from_binary.hpp  node_types.hpp  searchresults.hpp  utils.hpp  vamana.hpp  vector_view.hpp
src/load/: batch_stocastic_kmeans.cpp  batch_stochastic_kmeans.cpp  load_from_binary.cpp
src/main/: cli_workflow.cpp  main.cpp
src/utils/: ArmaVector.cpp  Graph.cpp  HDVector.cpp  Set.cpp  Vamana.cpp  Vector.cpp  diskAnn.cpp  diskUtils.cpp  flatDataset.cpp  inMemDataset.cpp  randomUtils.cpp
testdata/embeddings/glove/: glove.6B.50d.subset.txt
tests/: Test_benchmarkHarness.cpp  Test_binaryLoading.cpp  Test_boundaryAndPersistence.cpp  Test_cliWorkflow.cpp  Test_componentRegressions.cpp  Test_contractRegressions.cpp  Test_dataset_api.cpp  Test_diskUtils.cpp  Test_edgeCases.cpp  Test_greedySearch.cpp  Test_hdVectorCore.cpp  Test_hdvec.cpp  Test_inMemory.cpp  Test_randomUtilsAndSearch.cpp  Test_robustnessAndIntegration.cpp  Test_vectorCore.cpp  test_utils.hpp
